2004-01-10  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-file-collection.c: 
	* src/gnome-cmd-file-collection.h: 
	* src/gnome-cmd-dir.c: 
	* src/gnome-cmd-file.c:
	Fixed crash when renaming a directory. This should once again fix
	bug #129179.

2004-01-06  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2003-12-27  Marcus Bjurman  <marbj499@student.liu.se>

	* src/Makefile.am:
	* src/gnome-cmd-delete-dialog.c:
	* src/gnome-cmd-dir.c:
	* src/gnome-cmd-file-collection.c:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-mkdir-dialog.c:
	* src/gnome-cmd-xfer.c:
	Cleaned up file monitoring code. This should fix bug #129325.
	
	* src/gnome-cmd-xfer.c (update_xfer_gui_func):
	Refreshing the target directory after a xfer seems to move the input focus to
	the corresponding file-selector. Fixed this by simply setting the focus right
	again after each xfer. This should fix bug #128871.

2003-12-26  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-dir-indicator.c:
	The pointer now turns in to the pointing hand when the dir-indicator
	is focused. Patch submitted by Kevin James.

	* src/gnome-cmd-dir.c (gnome_cmd_dir_new):
	Fixed crash when renaming a directory multiple times and repeatedly
	going in and out of it. This should fix bug #129179.

2003-12-23  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-file-selector.c (gnome_cmd_file_selector_show_filter):
	Fixed a crash when pressing the 'x' to close the filter-box. This
	should fix bug #128764.

	* src/gnome-cmd-dir-indicator.h: 
	* src/gnome-cmd-dir-indicator.c: 
	* src/gnome-cmd-file-selector.c:
	Applied a patch from Kevin James that makes the dir-indicator into
	a control that can be clicked to changed the cwd. Before applying